# mlb-heatmaps

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/data/: ohtani_shohei.csv  rizzo_anthony.csv  russell_addison.csv
frontend/: package-lock.json
frontend/src/: App.tsx  HeatMap.tsx  ohtani.ts  rizzo.ts  russell.ts
